Clean up some instructions